--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,6 @@
 
 body {
   background-color: #e7e7e7;
-  max-width: 1440px;
+  max-width: 1500px;
   margin: auto;
 }
